pembaruan ui home

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@
 .link-navbar{
   @apply hover:text-primary
 }
+
+.img {
+  transition: 0.3s ease all;
+  -webkit-transition: 0.3s ease all;
+  -moz-transition: 0.3s ease all;
+  -ms-transition: 0.3s ease all;
+  -o-transition: 0.3s ease all;
+}
+.img:hover {
+  scale: 1.09;
+}
